# pytato

./: .gitignore  README.md  pyproject.toml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-09_17-40-06Z-rotato-file-format-exploration.md  2026-04-10_09-29-31Z-git-repository-initialization-and-push.md
src/rotato/: __init__.py  archive.py  file.py  io.py  model.py  modify.py  presets.py
src/rotato_mcp/: server.py
templates/: iphone14pro.rotato
